0.13.3.AB (Pre-Release):
-----------------------
- Adds `FocusNvramFix` Feature
  * Focuses the `ProtectNVRAM` feature (if set) on explicit UEFI Windows boots
  * The feature can be enabled using a new `focus_nvram_fix` configuration token
  * Replaces the `EnableMacosFilter` feature which has been removed
- Fixes Unwanted APFS Data Volume Entries
  * APFS data volumes could sometimes appear as boot options due to inadequate filtering
- Fixes SubScreen Boots
  * Boots from subscreens, such as after pressing F2, were handled as generic UEFI files
  * This resulted in some processes being skipped or unwanted processes being applied
  * RefindPlus now tries to make such boots specific as follows:
    - `Opencore`, `Clover`, `Linux`, `MacOS`, `Windows` and `Misc Others`
- Fixes Apple Hardware Test Option
  * While Apple stopped providing this feature after June 2013, some users may have restored this
    - See https://github.com/upekkha/AppleHardwareTest
  * In such cases however, RefindPlus did not provide the option on APFS volumes when `SyncAPFS` is active
  * This has now being reinstated subject to not having multiple MacOS instances in any single APFS container
- Fixes Misc Items
  * Always block UEFI Windows NVRAM items (Disregard Volatility)
  * Misidentification of certain volume types as HFS+ volumes
  * Excessive pointer event logging
  * Misplaced `Out` and `Return` log tags
  * Python Script Code Smells
- Improves `System Reset Call` Fix
  * Was previously always active when on system reboot calls
  * This meant such calls always required confirmation
  * Such confirmations are no longer required if keypresses had taken place before the call
  * Hence all legitimate calls now proceed without issue and buffered keystroke calls are also captured
- Improves FS Type Handling
  * Prevents Windows Support Volumes from being offered as boot options
  * Updates Volume `FS_TYPE` setting to match assumed types
  * Differentiates between HFS+ types