@@ -1228,6 +1228,9 @@ VOID ReadConfig (
         else if (MyStriCmp (TokenList[0], L"disable_amfi")) {
             GlobalConfig.DisableAMFI = HandleBoolean (TokenList, TokenCount);
         }
+        else if (MyStriCmp (TokenList[0], L"follow_symlinks")) {
+            GlobalConfig.FollowSymlinks = HandleBoolean (TokenList, TokenCount);
+        }
         else if (MyStriCmp (TokenList[0], L"focus_nvram_fix")
             ||  MyStriCmp  (TokenList[0], L"decline_macos_filter")
         ) {
